basic css code upgrades.(still does fuck shit nothing)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="counterSpeach">
 
                 </div>
-                <div id="counterCharacter">
+                <div id="counterAvatar">
 
                 </div>
             </div>
