--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     </div>
     <div id="gameWindow">
         <!-- inventory box -->
-        <div id="inventoryBox">
+        <div id="inventoryBox" class="foreground">
 
         </div>
         <!-- dialog bar -->
-        <div id="dialogBar">
+        <div id="dialogBar" class="foreground">
             <div id="setMainDialog">
-                <div id="heroAvatar">
+                <div id="heroAvatar" class="foreground">
 
                 </div>
-                <div id="heroSpeach">
+                <div id="heroSpeach" class="foreground">
 
                 </div>
-                <div id="counterSpeach">
+                <div id="counterSpeach" class="foreground">
 
                 </div>
-                <div id="counterAvatar">
+                <div id="counterAvatar" class="foreground">
 
                 </div>
             </div>
         </div>
         <!-- foreground elements -->
-        <div id="squareTree"></div>
+        <div id="squareTree" class="foreground"></div>
 
         <!-- main character -->
-        <div id="hero"></div>
+        <div id="hero" class="character"></div>
 
         <!-- background elements -->
-        <div id="tileMap"></div>
+        <div id="tileMap" class="background"></div>
 
     </div>
 </body>
