move da hero/cube

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>point n click adventure</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <div id="title">
@@ -45,3 +46,4 @@
     </div>
 </body>
 </html>
+<script src="js/main.js"></script>
