--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
         </div>
         <!-- foreground elements -->
         <div id="squareTree" class="foreground"></div>
-
+        <div id="door" class="foreground"></div>
+        
         <!-- main character -->
-        <div id="hero" class="character"></div>
+        <div id="hero" class="character">
+            <img src="img/animated-character-1-idle.gif" alt="hero" id="heroImage">
+        </div>
 
         <!-- background elements -->
-        <div id="tileMap" class="background"></div>
+        <div id="tileMap" class="background">
+            <img src="img/tilemap1.jpg" alt="tilemap" draggable="false">
+        </div>
 
     </div>
 </body>
