--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <!-- foreground elements -->
         <div id="squareTree" class="foreground"></div>
-        <div id="door" class="foreground"></div>
+        <div id="key" class="foreground"></div>
         
         <!-- main character -->
         <div id="hero" class="character">
