school stuff. finish this

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <!-- foreground elements -->
         <div id="squareTree" class="foreground"></div>
         <div id="key" class="foreground"></div>
-        
+        <div id="well" class="well"></div>
+        <div id="doorWizardHut" class="foreground"></div>
+
         <!-- main character -->
         <div id="hero" class="character">
             <img src="img/animated-character-1-idle.gif" alt="hero" id="heroImage">
