--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="dialogBar" class="foreground">
             <div id="setMainDialog">
                 <div id="heroAvatar" class="foreground">
-                    <img src="img/portairt.png" alt="hero avatar">
+                    <img src="img/fuck you ghost.png" alt="hero avatar">
                 </div>
                 <div id="heroSpeech" class="foreground speechBubble">
                     ...
@@ -44,12 +44,12 @@
 
         <!--Main Character-->
         <div id="hero" class="character">
-            <img src="img/animated-character-1-idle.gif" alt="hero charcater" id="heroImage">
+            <img src="img/fuck you ghost.png" alt="hero charcater" id="heroImage">
         </div>
 
         <!--Background elements-->
         <div id="tileMap" class="background">
-            <img src="img/tilemap1.jpg" alt="tilemap" draggable="false">
+            <img src="img/tilemap 2.png" alt="tilemap" draggable="false">
         </div>
 
     </div>
