leftover code cleanup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     ...
                 </div>
                 <div id="counterAvatar" class="foreground">
-                    <img src="img/portairStatue.png" alt="Counter avatar">
+                    <img src="img/Sprite-0001.jpg" alt="Counter avatar">
                 </div>
                 <div id="brownBar" class="background"></div>
             </div>
@@ -49,7 +49,7 @@
 
         <!--Background elements-->
         <div id="tileMap" class="background">
-            <img src="img/tilemap 2.png" alt="tilemap" draggable="false">
+            <img src="img/tilemap 3.png" alt="tilemap" draggable="false">
         </div>
 
     </div>
